# agentic-commerce-toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MANIFEST.in  PUBLIC_BOUNDARY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  private-boundary.yml
docs/: README.md  action-controls.md  automation.md  community-validation.md  provenance-schemas.md  releasing.md  reppo-inspector.md  upstream-review-requests.md  virtuals-acp-evidence-service.md
examples/: README.md
examples/action-control/: README.md  authorized-action-v1.example.json  dry-run-v1.example.json
examples/agent-job-result/: README.md  reppo-inspection-result-v1.example.json
examples/community-validation/: README.md  feedback-template.md  test-result-v1.example.json
examples/reppo-inspector/: README.md  datanets-envelope-v1.example.json
examples/source-manifest/: README.md  reppo-public-api-manifest-v1.example.json
examples/virtuals-acp-evidence/: README.md  offering-v1.example.json  receipt-v1.example.json  request-v1.example.json
schemas/: README.md  acp-evidence-request-v1.schema.json  action-control-v1.schema.json  agent-job-result-v1.schema.json  community-validation-result-v1.schema.json  inspector-envelope-v1.schema.json  source-manifest-v1.schema.json
scripts/: check_public_boundary.py  reppo_compat_watchdog.py  run_community_validation.py  toolkit_maintainer_context.py
src/agentic_commerce/: __init__.py  acp_evidence.py  action_control.py  cli.py  reppo.py
tests/: test_acp_evidence_service.py  test_action_control.py  test_cli.py  test_community_validation.py  test_public_boundary.py  test_reppo_inspector.py  test_reppo_watchdog.py  test_schema_contract.py  test_toolkit_maintainer_context.py  test_transport.py
tests/fixtures/reppo/: pods.json  stats.json  subnets.json
