[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-commerce-toolkit"
version = "0.1.0"
description = "Read-only public ecosystem inspection tools for agentic commerce"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[project.scripts]
agentic-commerce = "agentic_commerce.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
