[build-system]
requires = ["setuptools>=77,<84"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-commerce-toolkit"
version = "0.1.0"
description = "Public, protocol-neutral tools for inspectable agentic commerce workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "nccrypto" }]
keywords = ["agents", "commerce", "provenance", "reppo", "web3"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.5,<2",
  "jsonschema>=4.26,<5",
]

[project.urls]
Homepage = "https://github.com/nccrypto/agentic-commerce-toolkit"
Documentation = "https://github.com/nccrypto/agentic-commerce-toolkit/tree/main/docs"
Issues = "https://github.com/nccrypto/agentic-commerce-toolkit/issues"
Source = "https://github.com/nccrypto/agentic-commerce-toolkit"
Changelog = "https://github.com/nccrypto/agentic-commerce-toolkit/blob/main/CHANGELOG.md"

[project.scripts]
agentic-commerce = "agentic_commerce.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
